<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dynamicdrillers.sih2018user.OtpVerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical"
            android:padding="10dp"
            >


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/otplogo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/waiting_to_automatically_detect_an_sms_n_sent_to_your_mobile_number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:gravity="center"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/editMobileNo_otpverification_txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:gravity="center"
                android:text="+91092487474"
                android:textColor="@color/mediumgray"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/enter_4_digit_otp_below"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:gravity="center"
                android:textStyle="bold"

                />


            <com.goodiebag.pinview.Pinview
                android:id="@+id/pinview"
                app:pinWidth="30dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:pinLength="6"
                app:cursorVisible="true"
                app:forceKeyboard="true"
                app:hint="1"
                app:inputType="number"
                app:password="false"/>






            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/don_t_received_the_code"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/resendCode_otpVerification_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/resend_code"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="bold"

                    />



            </LinearLayout>

        </LinearLayout>




        <LinearLayout
            android:id="@+id/doneVerification_otpverification_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_done" />
        </LinearLayout>

    </LinearLayout>




</RelativeLayout>
